--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -27,6 +27,44 @@ a.button {
     z-index: 2;
 }
 
+#header{
+    background: url('../images/header_bg.png') no-repeat #000;
+    background-size: 100%;
+    height: 500px;
+
+    .logo-box{
+        .logo-description{
+            color: #9B9B9B;
+        }
+    }
+}
+
+#header, #header_subscription{
+    .logo-box{
+        margin-top: 28px;
+        display: flex;
+        align-items: center;
+
+        .logo{
+            cursor: pointer;
+        }
+
+        .br-r{
+            height: 40px;
+            background: #757575;
+            width: 1px;
+            margin-right: 15px;
+            margin-left: 15px;
+        }
+        
+        .logo-description{
+            font-size: 0.75rem;
+            line-height: 0.8125rem;
+            letter-spacing: 0.025em;
+        }
+    }
+}
+
 #header, #footer{
     .description-box{
         margin-top: 111px;
@@ -47,37 +85,6 @@ a.button {
             font-style: 1rem;
             line-height: 1.1875rem;
             letter-spacing: 0.015em;
-        }
-    }
-}
-
-#header{
-    background: url('../images/header_bg.png') no-repeat #000;
-    background-size: 100%;
-    height: 500px;
-
-    .logo-box{
-        margin-top: 28px;
-        display: flex;
-        align-items: center;
-
-        .logo{
-            cursor: pointer;
-        }
-
-        .br-r{
-            height: 40px;
-            background: #4b4b4b;
-            width: 1px;
-            margin-right: 15px;
-            margin-left: 15px;
-        }
-        
-        .logo-description{
-            font-size: 0.75rem;
-            color: #9B9B9B;
-            line-height: 0.8125rem;
-            letter-spacing: 0.025em;
         }
     }
 }
