Fixed link space and added address for buttons

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -320,8 +320,13 @@ a.button {
         }
     }
 
+
+    .mt-15{
+        margin-top: 15px;
+    }
+
     .hr{
-        margin-top: 110px;
+        margin-top: 95px;
         height: 1px;
         background: #696969;
     }
