--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -211,8 +211,10 @@ a.button {
     height: 100%; }
   #footer .description-box {
     margin-top: 80px; }
+  #footer .mt-15 {
+    margin-top: 15px; }
   #footer .hr {
-    margin-top: 110px;
+    margin-top: 95px;
     height: 1px;
     background: #696969; }
   #footer .socials {
