--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -349,8 +349,12 @@ a.button:hover {
   margin-top: 80px;
 }
 
+#footer .mt-15 {
+  margin-top: 15px;
+}
+
 #footer .hr {
-  margin-top: 110px;
+  margin-top: 95px;
   height: 1px;
   background: #696969;
 }
