--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -39,7 +39,7 @@ a.button {
     }
 }
 
-#header, #header_subscription{
+#header, #header_subscription, #header_success{
     .logo-box{
         margin-top: 28px;
         display: flex;
