--- a/app/assets/subscription.css
+++ b/app/assets/subscription.css
@@ -1,19 +1,19 @@
 @charset "UTF-8";
-#header_subscription {
+#header_subscription, #header_success {
   height: 335px;
   background: #CCFF00; }
-  #header_subscription .logo-box .logo-description {
+  #header_subscription .logo-box .logo-description, #header_success .logo-box .logo-description {
     color: #000;
     opacity: 0.5; }
-  #header_subscription .header-title-box {
+  #header_subscription .header-title-box, #header_success .header-title-box {
     margin-top: 105px; }
-    #header_subscription .header-title-box .title {
+    #header_subscription .header-title-box .title, #header_success .header-title-box .title {
       color: #000;
       font-size: 3rem;
       line-height: 3.1875rem;
       letter-spacing: 0.012em;
       font-family: 'Roboto-bold'; }
-    #header_subscription .header-title-box .description {
+    #header_subscription .header-title-box .description, #header_success .header-title-box .description {
       margin-top: 8px;
       color: #000;
       opacity: 0.5;
