--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -18,6 +18,375 @@
   src: url("../fonts/Roboto-Regular.eot?iefix") format("eot"), url("../fonts/Roboto-Regular.woff") format("woff"), url("../ffonts/Roboto-Regular.ttf") format("truetype");
   font-style: normal;
 }
+@media (min-width: 1024px) and (max-width: 1279px) {
+  .jcc {
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+  }
+
+  #header .description-box .title,
+  #how_it_works .description-box .title {
+    font-size: 2rem !important;
+    line-height: 2.5rem !important;
+  }
+
+  #header .description-box .text,
+  #how_it_works .description-box .text {
+    margin-top: 0 !important;
+    margin-bottom: 20px !important;
+    font-size: 0.85rem !important;
+  }
+
+  #header .description-box .button,
+  #how_it_works .description-box .button {
+    font-size: 0.9rem !important;
+    line-height: 1.1rem !important;
+    padding: 10px 15px;
+  }
+
+  #header {
+    height: 400px !important;
+    background-size: 120% !important;
+  }
+
+  #header .jcc {
+    -webkit-box-pack: justify !important;
+    -ms-flex-pack: justify !important;
+    justify-content: space-between !important;
+  }
+
+  #header .logo-box {
+    margin-left: 42px;
+  }
+
+  #header .description-box {
+    margin-top: 70px !important;
+    max-width: 290px !important;
+    margin-left: 42px;
+  }
+
+  #how_it_works .first-part .description-box {
+    max-width: 320px;
+  }
+
+  #how_it_works .first-part .description-box .title {
+    font-size: 1.5rem !important;
+    line-height: 1.8rem !important;
+    margin-bottom: 5px;
+  }
+
+  #how_it_works .second-part {
+    margin-top: -190px !important;
+  }
+
+  #how_it_works .second-part .image-box img {
+    width: 280px !important;
+    height: 480px !important;
+  }
+
+  #how_it_works .second-part .description-box {
+    max-width: 450px;
+  }
+
+  #how_it_works .second-part .description-box .title {
+    font-size: 1.5rem !important;
+    line-height: 1.8rem !important;
+    margin-bottom: 5px;
+  }
+
+  #how_it_works .rectangle {
+    height: 480px !important;
+  }
+
+  #how_it_works .justify-content-between {
+    -webkit-box-pack: center !important;
+    -ms-flex-pack: center !important;
+    justify-content: center !important;
+  }
+
+  #progress {
+    height: 400px !important;
+    background-position: 35% center !important;
+    background-size: cover !important;
+  }
+
+  #progress .description-box {
+    margin-top: 127px !important;
+    margin-left: 42px;
+  }
+
+  #progress .description-box .title {
+    font-size: 1.5rem !important;
+    line-height: 1.8rem !important;
+    margin-bottom: 5px;
+  }
+
+  #progress .description-box .text {
+    margin-top: 0 !important;
+    margin-bottom: 20px !important;
+    font-size: 0.85rem !important;
+  }
+
+  #progress .description-box .button {
+    font-size: 0.9rem !important;
+    line-height: 1.1rem !important;
+    padding: 10px 15px;
+  }
+
+  #without_calls_and_sms {
+    height: 400px !important;
+  }
+
+  #without_calls_and_sms .image-box {
+    margin-left: 42px;
+  }
+
+  #without_calls_and_sms .image-box img {
+    width: 330px !important;
+    height: 280px !important;
+  }
+
+  #without_calls_and_sms .description-box .title {
+    font-size: 1.5rem !important;
+    line-height: 1.8rem !important;
+    margin-bottom: 5px;
+  }
+
+  #without_calls_and_sms .description-box .text {
+    margin-top: 0 !important;
+    margin-bottom: 20px !important;
+    font-size: 0.85rem !important;
+  }
+
+  #without_calls_and_sms .description-box .button {
+    font-size: 0.9rem !important;
+    line-height: 1.1rem !important;
+    padding: 10px 15px;
+  }
+
+  #motivation {
+    height: 400px !important;
+    background-position: right center !important;
+    background-size: cover !important;
+  }
+
+  #motivation .description-box {
+    margin-top: -10px !important;
+    margin-left: 42px;
+  }
+
+  #motivation .description-box .title {
+    font-size: 1.5rem !important;
+    line-height: 1.8rem !important;
+    margin-bottom: 5px;
+  }
+
+  #motivation .description-box .text {
+    margin-top: 0 !important;
+    margin-bottom: 20px !important;
+    font-size: 0.85rem !important;
+  }
+
+  #motivation .description-box .button {
+    font-size: 0.9rem !important;
+    line-height: 1.1rem !important;
+    padding: 10px 15px;
+  }
+
+  #footer {
+    height: 555px !important;
+  }
+
+  #footer .description-box {
+    margin-left: 42px;
+  }
+
+  #footer .description-box .title {
+    font-size: 1.5rem !important;
+    line-height: 1.8rem !important;
+    margin-bottom: 5px;
+  }
+
+  #footer .description-box .text {
+    margin-top: 0 !important;
+    margin-bottom: 20px !important;
+    font-size: 0.85rem !important;
+  }
+
+  #footer .description-box .button {
+    font-size: 0.9rem !important;
+    line-height: 1.1rem !important;
+    padding: 10px 15px;
+  }
+
+  #footer .hr {
+    margin-top: 65px !important;
+    margin-left: -38px;
+    width: 842px;
+  }
+
+  #footer .socials,
+  #footer .links-box,
+  #footer .copyrights {
+    margin-left: 42px;
+  }
+}
+@media (min-width: 1280px) and (max-width: 1400px) {
+  .jcc {
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+  }
+
+  #header {
+    background-size: 120% !important;
+    height: 431px !important;
+  }
+
+  #header .description-box {
+    margin-top: 70px !important;
+    max-width: 430px;
+  }
+
+  #how_it_works .first-part .description-box {
+    margin-left: 86px;
+  }
+
+  #how_it_works .first-part .description-box .title {
+    width: 460px;
+  }
+
+  #how_it_works .rectangle {
+    -webkit-clip-path: polygon(0 41%, 100% 1%, 100% 57%, 0 96%) !important;
+    clip-path: polygon(0 41%, 100% 1%, 100% 57%, 0 96%) !important;
+    height: 500px !important;
+    margin-top: -140px !important;
+  }
+
+  #how_it_works .second-part {
+    margin-top: -230px !important;
+  }
+
+  #how_it_works .second-part .image-box {
+    margin-left: 86px;
+  }
+
+  #progress {
+    background-position: center !important;
+  }
+
+  #progress .description-box {
+    margin-left: 86px;
+  }
+
+  #without_calls_and_sms .image-box img {
+    width: 306px !important;
+    height: 250px !important;
+    margin-left: 86px;
+  }
+
+  #without_calls_and_sms .description-box .text {
+    max-width: 440px !important;
+  }
+
+  #motivation {
+    height: 500px !important;
+    background-position: right center !important;
+    background-size: 125% 100% !important;
+    background-repeat: no-repeat !important;
+  }
+
+  #motivation .description-box {
+    margin-left: 86px;
+  }
+
+  #footer .description-box {
+    margin-left: 86px;
+  }
+
+  #footer .socials {
+    margin-left: 93px;
+  }
+
+  #footer .links-box {
+    margin-left: 93px;
+  }
+
+  #footer .copyrights {
+    margin-left: 93px;
+  }
+}
+@media (min-width: 768px) and (max-width: 1023px) {
+  .jcc {
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+  }
+
+  .description-box {
+    text-align: center;
+    margin-top: 150px !important;
+    max-width: 100% !important;
+  }
+
+  .description-box .title {
+    max-width: 100% !important;
+    font-size: 2rem !important;
+    line-height: 2.3rem !important;
+  }
+
+  .description-box .text {
+    max-width: 100% !important;
+    margin-top: 5px !important;
+    font-size: 0.8rem !important;
+  }
+
+  #header {
+    background-size: 120% 100% !important;
+    background-position: left center !important;
+  }
+
+  #header .description-box {
+    margin-top: 220px !important;
+  }
+
+  #how_it_works .justify-content-between {
+    -webkit-box-pack: center !important;
+    -ms-flex-pack: center !important;
+    justify-content: center !important;
+  }
+
+  #how_it_works .rectangle {
+    display: none;
+  }
+
+  #how_it_works .first-part .description-box {
+    margin-top: 70px !important;
+  }
+
+  #how_it_works .second-part {
+    margin-top: 0 !important;
+  }
+
+  #how_it_works .second-part .description-box {
+    margin-top: 70px !important;
+  }
+
+  #how_it_works .image-box {
+    margin-top: 80px;
+    text-align: center;
+  }
+
+  #progress {
+    height: 525px !important;
+    background: url("../images/progress-bg-small.png") no-repeat !important;
+  }
+
+  #progress .description-box {
+    margin-top: 320px !important;
+  }
+}
 * {
   font-family: 'Roboto-medium';
   font-size: 16px;
@@ -45,16 +414,6 @@ a.button:hover {
 
 .z-index-2 {
   z-index: 2;
-}
-
-#header {
-  background: url("../images/header_bg.png") no-repeat #000;
-  background-size: 100%;
-  height: 500px;
-}
-
-#header .logo-box .logo-description {
-  color: #9B9B9B;
 }
 
 #header .logo-box,
@@ -118,6 +477,20 @@ a.button:hover {
   letter-spacing: 0.015em;
 }
 
+#header {
+  background: url("../images/header_bg.png") no-repeat #000;
+  background-size: 100%;
+  height: 500px;
+}
+
+#header .logo-box .logo-description {
+  color: #9B9B9B;
+}
+
+#header .description-box {
+  max-width: 430px;
+}
+
 #how_it_works .description-box,
 #progress .description-box,
 #without_calls_and_sms .description-box,
@@ -162,15 +535,6 @@ a.button:hover {
   margin-top: 75px;
 }
 
-#how_it_works .first-part .image-box img {
-  max-width: 208px;
-  max-height: 365px;
-}
-
-#how_it_works .first-part .image-box img:nth-child(1) {
-  margin-left: -15px;
-}
-
 #how_it_works .first-part .image-box .author {
   margin-top: 13px;
 }
@@ -181,9 +545,10 @@ a.button:hover {
 }
 
 #how_it_works .first-part .image-box .author .name {
+  font-family: 'Roboto-bold';
   margin-left: 6px;
   font-size: 0.875rem;
-  letter-spacing: 0.019em;
+  letter-spacing: 0.009em;
   line-height: 0.900rem;
   color: #000;
 }
@@ -228,6 +593,12 @@ a.button:hover {
 
 #progress .description-box .title {
   color: #fff;
+}
+
+@media (min-width: 1281px) and (max-width: 1599px) {
+  #progress {
+    background-position: center center;
+  }
 }
 
 #without_calls_and_sms {
@@ -390,8 +761,6 @@ a.button:hover {
   line-height: 0.875rem;
   letter-spacing: -0.006em;
 }
-@charset "UTF-8";
-
 #header_subscription,
 #header_success {
   height: 335px;
