--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -27,17 +27,7 @@ a.button {
     z-index: 2;
 }
 
-#header{
-    background: url('../images/header_bg.png') no-repeat #000;
-    background-size: 100%;
-    height: 500px;
 
-    .logo-box{
-        .logo-description{
-            color: #9B9B9B;
-        }
-    }
-}
 
 #header, #header_subscription, #header_success{
     .logo-box{
@@ -89,6 +79,22 @@ a.button {
     }
 }
 
+#header{
+    background: url('../images/header_bg.png') no-repeat #000;
+    background-size: 100%;
+    height: 500px;
+
+    .logo-box{
+        .logo-description{
+            color: #9B9B9B;
+        }
+    }
+
+    .description-box{
+        max-width: 430px;
+    }
+}
+
 #how_it_works, #progress, #without_calls_and_sms, #motivation{
     
     .description-box{
@@ -124,14 +130,6 @@ a.button {
 
         .image-box{
             margin-top: 75px;
-            
-            img{
-                max-width: 208px;
-                max-height: 365px;
-                &:nth-child(1){
-                    margin-left: -15px;
-                }
-            }
 
             .author{
                 margin-top: 13px;
@@ -143,9 +141,10 @@ a.button {
                 }
 
                 .name{
+                    font-family: 'Roboto-bold';
                     margin-left: 6px;
                     font-size: 0.875rem;
-                    letter-spacing: 0.019em;
+                    letter-spacing: 0.009em;
                     line-height: 0.900rem;
                     color: #000;
                 }
@@ -193,6 +192,11 @@ a.button {
         .title{
             color: #fff;
         }
+    }
+
+    @media (min-width: 1281px) and (max-width: 1599px) {
+        background-position: center center;
+        
     }
 }
 
@@ -314,10 +318,6 @@ a.button {
 
     .description-box{
         margin-top: 80px;
-
-        .text{
-
-        }
     }
 
 
