--- a/app/scss/subscription.scss
+++ b/app/scss/subscription.scss
@@ -11,6 +11,7 @@
 
     .header-title-box{
         margin-top: 105px;
+        max-width: 400px;
 
         .title{
             color: #000;
@@ -40,6 +41,7 @@
 
     form{
         margin-top: 45px;
+        max-width: 430px;
 
         .form-control{
             padding: 9px 20px;
