--- a/app/scss/main.1024-1279.scss
+++ b/app/scss/main.1024-1279.scss
@@ -63,7 +63,7 @@
             margin-top: -190px !important;
             
             .image-box{
-                img {
+                img.slide-box {
                     width: 280px !important;
                     height: 480px !important;
                 } 
