--- a/app/assets/main.768-1023.css
+++ b/app/assets/main.768-1023.css
@@ -29,14 +29,18 @@
     display: none; }
   #how_it_works .first-part .description-box {
     margin-top: 70px !important; }
+  #how_it_works .image-box {
+    margin-top: 80px;
+    text-align: center; }
   #how_it_works .second-part {
     margin-top: 0 !important; }
     #how_it_works .second-part .description-box {
       padding-left: 0px !important;
       margin-top: 70px !important; }
-  #how_it_works .image-box {
-    margin-top: 80px;
-    text-align: center; }
+    #how_it_works .second-part .image-box {
+      max-width: 306px;
+      margin-right: auto;
+      margin-left: auto; }
   #progress {
     height: 525px !important;
     background: url(../images/progress-bg-small.png) no-repeat !important;
