--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -937,7 +937,7 @@ a.button:hover {
 #how_it_works .second-part .image-box .slider .slides-box {
   height: 360px;
   width: 100%;
-  background: #000;
+  background: #fff;
   position: relative;
   top: 140px;
   display: -webkit-box;
