--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -208,7 +208,7 @@ a.button {
                 .slides-box{
                     height: 360px;
                     width: 100%;
-                    background: #000;
+                    background: #fff;
                     position: relative;
                     top: 140px;
                     display: flex;
